--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <link rel="stylesheet" href="css-reset.css">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Order summary card</title>
@@ -14,13 +14,13 @@
 <body>
   <main>
     <div class="card">
-      <img class="main-img" src="images/illustration-hero.svg" alt="Person listening to music">
+      <img class="main-img" src="./illustration-hero.svg" alt="Person listening to music">
       <h1>Order Summary</h1>
       <p class="main-text">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you
         like!
       </p>
       <div class="grey-banner">
-        <img class="music-icon" src="images/icon-music.svg" alt="Music icon">
+        <img class="music-icon" src="./icon-music.svg" alt="Music icon">
         <div class="plan-price">
           <p class="plan">Annual Plan</p>
           <p class="price">$59.99/year</p>
